--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -1,2 +1,3 @@
-- name: Python Style Checker
-  uses: andymckay/pycodestyle-action@0.1.3
+- name: Pyflakes Syntax Checker
+  uses: lgeiger/pyflakes-action@v1.0.1
+
